--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
 	</properties>
 
 	<dependencies>
+		<!--lomok-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.10</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- 引入thymeleaf模板引擎-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
